--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -12,6 +12,8 @@ jobs:
         with:
           version: v0.15.3
       - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
       - run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Push
         env:
